--- a/app-admin/denyhosts/ChangeLog
+++ b/app-admin/denyhosts/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/denyhosts
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/denyhosts/ChangeLog,v 1.51 2012/11/03 20:24:51 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/denyhosts/ChangeLog,v 1.52 2012/11/03 23:18:07 blueness Exp $
+
+  03 Nov 2012; Anthony G. Basile <blueness@gentoo.org> denyhosts-2.6-r6.ebuild:
+  stable arm, bug #441044
 
   03 Nov 2012; Anthony G. Basile <blueness@gentoo.org> denyhosts-2.6-r6.ebuild:
   stable ppc, bug #441044
