--- a/sys-kernel/linux-firmware/ChangeLog
+++ b/sys-kernel/linux-firmware/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/linux-firmware
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-firmware/ChangeLog,v 1.54 2012/10/03 20:45:59 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-firmware/ChangeLog,v 1.55 2012/11/04 00:18:45 chithanh Exp $
+
+*linux-firmware-20121030 (04 Nov 2012)
+
+  04 Nov 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  +linux-firmware-20121030.ebuild:
+  New snapshot.
 
 *linux-firmware-20120924 (03 Oct 2012)
 
