--- a/app-emulation/libvirt/ChangeLog
+++ b/app-emulation/libvirt/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-emulation/libvirt
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.230 2012/10/30 12:01:54 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.231 2012/11/04 01:29:38 cardoe Exp $
+
+*libvirt-1.0.0 (04 Nov 2012)
+
+  04 Nov 2012; Doug Goldstein <cardoe@gentoo.org> +libvirt-1.0.0.ebuild,
+  +files/libvirtd.init-r11, metadata.xml:
+  Version bump. Add support for firewalld as well.
 
   30 Oct 2012; <ago@gentoo.org> libvirt-0.10.2-r3.ebuild:
   Stable for amd64, wrt bug #439298
