--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7099 2012/11/03 18:39:30 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7100 2012/11/04 04:49:04 flameeyes Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  04 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org> package.mask:
+  Mask some packages that depend on the old 1.46 version of boost.
 
   03 Nov 2012; Markos Chandras <hwoarang@gentoo.org> package.mask:
   Update mask for app-benchmarks/ltp
