--- a/app-admin/elektra/ChangeLog
+++ b/app-admin/elektra/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for app-admin/elektra
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/elektra/ChangeLog,v 1.6 2012/06/23 07:47:24 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/elektra/ChangeLog,v 1.7 2012/11/04 09:35:03 xmw Exp $
+
+*elektra-0.7.1-r1 (04 Nov 2012)
+
+  04 Nov 2012; Michael Weber <xmw@gentoo.org> +elektra-0.7.1-r1.ebuild,
+  metadata.xml:
+  Revbump to make gcov optional (bug 436812 by Alexander E. Patrakov), avoid
+  collision with allegro (bug 409305, Chris Reffett), avoid collision with
+  mit-krb5 (bug 403025, Marios Andreopoulos)
 
   23 Jun 2012; Samuli Suominen <ssuominen@gentoo.org> elektra-0.7.1.ebuild,
   +files/elektra-0.7.1-automake-1.12.patch:
