--- a/app-office/calligra/ChangeLog
+++ b/app-office/calligra/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-office/calligra
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/calligra/ChangeLog,v 1.73 2012/09/21 07:16:55 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/calligra/ChangeLog,v 1.74 2012/11/04 10:27:49 scarabeus Exp $
+
+*calligra-2.5.3 (04 Nov 2012)
+
+  04 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> +calligra-2.5.3.ebuild,
+  -calligra-2.4.3-r1.ebuild, -calligra-2.5.2.ebuild:
+  Version bump to latest, only few bugfixes straight to stable, remove older.
 
   21 Sep 2012; Johannes Huber <johu@gentoo.org> calligra-2.5.2.ebuild,
   calligra-2.5.49.9999.ebuild, calligra-9999.ebuild:
