--- a/app-admin/elektra/ChangeLog
+++ b/app-admin/elektra/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for app-admin/elektra
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/elektra/ChangeLog,v 1.7 2012/11/04 09:35:03 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/elektra/ChangeLog,v 1.8 2012/11/04 10:40:57 xmw Exp $
+
+*elektra-0.8.3 (04 Nov 2012)
+
+  04 Nov 2012; Michael Weber <xmw@gentoo.org> +elektra-0.8.3.ebuild,
+  +files/elektra-0.8.3-fix-yajl-if-user-config.patch,
+  +files/elektra-0.8.3-introduce-attributes.patch:
+  Version bump, big thanks to Andreas Sturmlechner doing all the work on bug
+  429722.
 
 *elektra-0.7.1-r1 (04 Nov 2012)
 
