--- a/media-sound/qmmp/ChangeLog
+++ b/media-sound/qmmp/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/qmmp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/qmmp/ChangeLog,v 1.96 2012/08/25 00:12:11 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/qmmp/ChangeLog,v 1.97 2012/11/04 10:54:09 hwoarang Exp $
+
+  04 Nov 2012; Markos Chandras <hwoarang@gentoo.org> qmmp-0.6.3.ebuild,
+  qmmp-9999.ebuild:
+  Switch from udisks:0 to udisks:2 per bug #439646
 
   25 Aug 2012; Markos Chandras <hwoarang@gentoo.org> -qmmp-0.6.2.ebuild:
   Remove old
