--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7101 2012/11/04 10:00:07 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7102 2012/11/04 11:01:30 hwoarang Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  04 Nov 2012; Markos Chandras <hwoarang@gentoo.org> package.mask:
+  Mask new avidemux
 
   04 Nov 2012; Justin Lecher <jlec@gentoo.org> updates/4Q-2012:
   Move sci-chemistry/mmtk to sci-libs/mmtk due to duplication, #441648
