--- a/app-admin/elektra/ChangeLog
+++ b/app-admin/elektra/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/elektra
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/elektra/ChangeLog,v 1.8 2012/11/04 10:40:57 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/elektra/ChangeLog,v 1.9 2012/11/04 11:23:30 xmw Exp $
+
+*elektra-0.7.1-r2 (04 Nov 2012)
+
+  04 Nov 2012; Michael Weber <xmw@gentoo.org> -elektra-0.7.1.ebuild,
+  -elektra-0.7.1-r1.ebuild, +elektra-0.7.1-r2.ebuild:
+  Fix includes of renamed headers, drop old
 
 *elektra-0.8.3 (04 Nov 2012)
 
