--- a/app-admin/elektra/ChangeLog
+++ b/app-admin/elektra/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/elektra
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/elektra/ChangeLog,v 1.9 2012/11/04 11:23:30 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/elektra/ChangeLog,v 1.10 2012/11/04 12:01:55 xmw Exp $
+
+  04 Nov 2012; Michael Weber <xmw@gentoo.org> elektra-0.7.1-r2.ebuild,
+  elektra-0.8.3.ebuild:
+  Update HOMEPAGE
 
 *elektra-0.7.1-r2 (04 Nov 2012)
 
