--- a/www-apache/passenger/ChangeLog
+++ b/www-apache/passenger/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-apache/passenger
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apache/passenger/ChangeLog,v 1.54 2012/10/29 07:39:40 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apache/passenger/ChangeLog,v 1.55 2012/11/04 12:13:34 graaff Exp $
+
+  04 Nov 2012; Hans de Graaff <graaff@gentoo.org> passenger-3.0.17.ebuild:
+  Add missing built-time dependency on rake, bug 441556.
 
   29 Oct 2012; Hans de Graaff <graaff@gentoo.org> -passenger-3.0.11.ebuild,
   -passenger-3.0.11-r1.ebuild, -passenger-3.0.12.ebuild:
