--- a/net-ftp/vsftpd/ChangeLog
+++ b/net-ftp/vsftpd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-ftp/vsftpd
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/vsftpd/ChangeLog,v 1.157 2012/11/04 10:42:52 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/vsftpd/ChangeLog,v 1.158 2012/11/04 13:54:44 blueness Exp $
+
+  04 Nov 2012; Anthony G. Basile <blueness@gentoo.org> vsftpd-3.0.2.ebuild:
+  stable arm ppc ppc64, bug #441728
 
   04 Nov 2012; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
   Remove inactive mainainer
