--- a/sys-kernel/linux-firmware/ChangeLog
+++ b/sys-kernel/linux-firmware/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-kernel/linux-firmware
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-firmware/ChangeLog,v 1.55 2012/11/04 00:18:45 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-firmware/ChangeLog,v 1.56 2012/11/04 14:08:54 ago Exp $
+
+  04 Nov 2012; Agostino Sarubbo <ago@gentoo.org>
+  linux-firmware-20120924.ebuild:
+  Stable for amd64, wrt bug #441668
 
 *linux-firmware-20121030 (04 Nov 2012)
 
