--- a/media-libs/oyranos/ChangeLog
+++ b/media-libs/oyranos/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for media-libs/oyranos
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/oyranos/ChangeLog,v 1.4 2012/11/04 11:26:02 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/oyranos/ChangeLog,v 1.5 2012/11/04 16:28:21 xmw Exp $
+
+*oyranos-0.9.0 (04 Nov 2012)
+
+  04 Nov 2012; Michael Weber <xmw@gentoo.org> +oyranos-0.9.0.ebuild,
+  +files/oyranos-0.9.0-array.patch, +files/oyranos-0.9.0-buildsystem.patch,
+  +files/oyranos-0.9.0-png.patch:
+  Version bump with upstream fixes (thanks Andreas Sturmlechner, bug 440838)
 
 *oyranos-0.4.0-r1 (04 Nov 2012)
 
