--- a/media-libs/oyranos/ChangeLog
+++ b/media-libs/oyranos/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/oyranos
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/oyranos/ChangeLog,v 1.5 2012/11/04 16:28:21 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/oyranos/ChangeLog,v 1.6 2012/11/04 16:50:44 xmw Exp $
+
+  04 Nov 2012; Michael Weber <xmw@gentoo.org> oyranos-0.9.0.ebuild:
+  Fix for add-admin/elektra-0.8.3.
 
 *oyranos-0.9.0 (04 Nov 2012)
 
