PBZIP2 is gone (replace by BZIP2 template); remove it from MISC-FREE license group. Add RSA license template to MISC-FREE.

--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,14 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7103 2012/11/04 12:24:48 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7104 2012/11/04 16:57:44 ulm Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  04 Nov 2012; Ulrich Müller <ulm@gentoo.org> license_groups:
+  PBZIP2 is gone (replace by BZIP2 template); remove it from MISC-FREE license
+  group. Add RSA license template to MISC-FREE.
 
   04 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> package.mask:
   Mask new icu for now.
