--- a/dev-db/mongodb/ChangeLog
+++ b/dev-db/mongodb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/mongodb
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/mongodb/ChangeLog,v 1.48 2012/11/04 14:23:25 ultrabug Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/mongodb/ChangeLog,v 1.49 2012/11/04 17:20:15 ultrabug Exp $
+
+  04 Nov 2012; <alexys@gentoo.org> files/mongodb-2.2-r2-boost-1.50.patch:
+  Correct 2.2.x boost-1.50 patch thanks to Hank Leininger for spotting.
 
 *mongodb-2.2.1 (04 Nov 2012)
 *mongodb-2.2.0-r2 (04 Nov 2012)
