--- a/dev-lang/regina-rexx/ChangeLog
+++ b/dev-lang/regina-rexx/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/regina-rexx
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/regina-rexx/ChangeLog,v 1.27 2012/11/04 14:31:19 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/regina-rexx/ChangeLog,v 1.28 2012/11/04 19:50:35 ago Exp $
+
+  04 Nov 2012; Agostino Sarubbo <ago@gentoo.org> regina-rexx-3.6-r1.ebuild:
+  respect CC/AR
 
 *regina-rexx-3.6-r1 (04 Nov 2012)
 
