--- a/dev-util/ccache/ChangeLog
+++ b/dev-util/ccache/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/ccache
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/ccache/ChangeLog,v 1.100 2012/11/04 08:27:13 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/ccache/ChangeLog,v 1.101 2012/11/04 20:22:16 ago Exp $
+
+  04 Nov 2012; Agostino Sarubbo <ago@gentoo.org> ccache-3.1.8.ebuild:
+  Stable for amd64, wrt bug #441308
 
   04 Nov 2012; Mike Frysinger <vapier@gentoo.org> ccache-3.1.8.ebuild:
   Depend on xz-utils for stage building.
