--- a/app-forensics/air/ChangeLog
+++ b/app-forensics/air/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-forensics/air
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-forensics/air/ChangeLog,v 1.21 2012/10/03 15:00:26 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-forensics/air/ChangeLog,v 1.22 2012/11/04 20:22:50 ago Exp $
+
+  04 Nov 2012; Agostino Sarubbo <ago@gentoo.org> air-2.0.0-r1.ebuild:
+  Stable for amd64, wrt bug #327069
 
 *air-2.0.0-r1 (03 Oct 2012)
 
