--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7105 2012/11/04 18:51:41 hd_brummy Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7106 2012/11/04 20:49:38 ulm Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  04 Nov 2012; Ulrich Müller <ulm@gentoo.org> license_groups:
+  Remove unused RSA-MD4, RSA-MD5, and RSA-PKCS11 licenses; replaced by RSA.
 
   04 Nov 2012; Joerg Bornkessel <hd_brummy@gentoo.org> package.mask:
   masked media-plugins/vdr-softdevice-0.5.0.20110417 for testing on bug #422605
