--- a/net-dns/pdns/ChangeLog
+++ b/net-dns/pdns/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-dns/pdns
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/pdns/ChangeLog,v 1.82 2012/11/04 21:42:49 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/pdns/ChangeLog,v 1.83 2012/11/04 22:57:50 swegener Exp $
+
+  04 Nov 2012; Sven Wegener <swegener@gentoo.org>
+  -files/2.9.18-default-mysql-options.patch, -pdns-2.9.22-r1.ebuild,
+  -pdns-2.9.22.5.ebuild, -pdns-2.9.22.6.ebuild, -files/pdns-2.9.22-gcc44.patch,
+  -pdns-3.0.ebuild:
+  Cleanup.
 
 *pdns-3.1 (04 Nov 2012)
 
