--- a/app-emulation/qemu/ChangeLog
+++ b/app-emulation/qemu/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-emulation/qemu
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.141 2012/11/04 22:00:17 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.142 2012/11/05 05:32:44 cardoe Exp $
+
+  05 Nov 2012; Doug Goldstein <cardoe@gentoo.org> qemu-1.2.0.ebuild,
+  qemu-9999.ebuild:
+  Fix typo noticed by Alphat-PC <AlphatPC@gmail.com>
 
   04 Nov 2012; Doug Goldstein <cardoe@gentoo.org> qemu-9999.ebuild:
   Fix patch name.
