--- a/app-emulation/qemu/ChangeLog
+++ b/app-emulation/qemu/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/qemu
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.142 2012/11/05 05:32:44 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.143 2012/11/05 06:42:53 slyfox Exp $
+
+  05 Nov 2012; Sergei Trofimovich <slyfox@gentoo.org> qemu-9999.ebuild:
+  Once againt readd or32 target (OpenRISC). Added nore binaries to RWX exempt
+  list: qemu-{microblazeel,or32,s390x,unicore32}. unicore32 got system target
+  implementation.
 
   05 Nov 2012; Doug Goldstein <cardoe@gentoo.org> qemu-1.2.0.ebuild,
   qemu-9999.ebuild:
