--- a/dev-ruby/ruby-openid/ChangeLog
+++ b/dev-ruby/ruby-openid/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ruby-openid
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-openid/ChangeLog,v 1.26 2012/10/17 03:53:20 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-openid/ChangeLog,v 1.27 2012/11/05 07:15:06 graaff Exp $
+
+  05 Nov 2012; Hans de Graaff <graaff@gentoo.org> -ruby-openid-2.1.8.ebuild:
+  Cleanup.
 
   17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   ruby-openid-2.2.0.ebuild:
