--- a/dev-ruby/ruby-openid/ChangeLog
+++ b/dev-ruby/ruby-openid/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/ruby-openid
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-openid/ChangeLog,v 1.27 2012/11/05 07:15:06 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-openid/ChangeLog,v 1.28 2012/11/05 07:28:19 graaff Exp $
+
+*ruby-openid-2.2.2 (05 Nov 2012)
+
+  05 Nov 2012; Hans de Graaff <graaff@gentoo.org> +ruby-openid-2.2.2.ebuild:
+  Version bump.
 
   05 Nov 2012; Hans de Graaff <graaff@gentoo.org> -ruby-openid-2.1.8.ebuild:
   Cleanup.
