--- a/app-editors/fte/ChangeLog
+++ b/app-editors/fte/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-editors/fte
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/fte/ChangeLog,v 1.51 2012/08/05 23:32:28 ottxor Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/fte/ChangeLog,v 1.52 2012/11/05 13:05:32 pinkbyte Exp $
+
+  05 Nov 2012; Sergey Popov <pinkbyte@gentoo.org> fte-20051115-r1.ebuild,
+  fte-20051115-r3.ebuild:
+  Correct package license, remove reduntant Artistic license file installation
+  from 'dodoc'
 
 *fte-20051115-r3 (05 Aug 2012)
 
