--- a/sys-apps/openrc/ChangeLog
+++ b/sys-apps/openrc/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/openrc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.236 2012/10/22 07:55:17 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.237 2012/11/05 17:47:35 williamh Exp $
+
+*openrc-0.11.3 (05 Nov 2012)
+
+  05 Nov 2012; William Hubbs <williamh@gentoo.org> +openrc-0.11.3.ebuild:
+  version bump
 
 *openrc-0.11.2 (22 Oct 2012)
 
