--- a/dev-util/dialog/ChangeLog
+++ b/dev-util/dialog/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/dialog
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/dialog/ChangeLog,v 1.166 2012/11/05 19:39:41 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/dialog/ChangeLog,v 1.167 2012/11/05 20:03:55 vapier Exp $
+
+  05 Nov 2012; Mike Frysinger <vapier@gentoo.org> dialog-1.1.20120706.ebuild:
+  Do not compile static objects when USE=static-libs #396193 by Agostino
+  Sarubbo.
 
   05 Nov 2012; Mike Frysinger <vapier@gentoo.org> dialog-1.1.20120706.ebuild:
   Drop bash from RDEPEND since it does not require it.
