--- a/sci-calculators/units/ChangeLog
+++ b/sci-calculators/units/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-calculators/units
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-calculators/units/ChangeLog,v 1.37 2012/11/05 19:33:02 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-calculators/units/ChangeLog,v 1.38 2012/11/05 20:10:01 jer Exp $
+
+  05 Nov 2012; Jeroen Roovers <jer@gentoo.org> units-2.01.ebuild,
+  +files/units-2.01-install.patch:
+  Fix parallel make in src_install().
 
   05 Nov 2012; Jeroen Roovers <jer@gentoo.org> units-2.00.ebuild,
   units-2.01.ebuild:
