--- a/sys-apps/openrc/ChangeLog
+++ b/sys-apps/openrc/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/openrc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.238 2012/11/05 21:45:11 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.239 2012/11/05 21:48:12 williamh Exp $
+
+  05 Nov 2012; William Hubbs <williamh@gentoo.org> -openrc-0.10.4.ebuild,
+  -openrc-0.11.2.ebuild, -openrc-0.11.3.ebuild:
+  remove several broken versions
 
 *openrc-0.11.4 (05 Nov 2012)
 
