--- a/dev-python/python-docs/ChangeLog
+++ b/dev-python/python-docs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/python-docs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-docs/ChangeLog,v 1.167 2012/10/07 04:03:49 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-docs/ChangeLog,v 1.168 2012/11/05 22:15:46 blueness Exp $
+
+  05 Nov 2012; Anthony G. Basile <blueness@gentoo.org> python-docs-3.3.0.ebuild:
+  stable ppc ppc64, bug #441296
 
   07 Oct 2012; Mike Gilbert <floppym@gentoo.org> python-docs-2.6.8.ebuild,
   python-docs-2.7.3.ebuild, python-docs-3.1.5.ebuild, python-docs-3.2.3.ebuild,
