--- a/dev-python/pyasn1/ChangeLog
+++ b/dev-python/pyasn1/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyasn1
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyasn1/ChangeLog,v 1.37 2012/08/29 05:31:55 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyasn1/ChangeLog,v 1.38 2012/11/05 22:29:56 blueness Exp $
+
+  05 Nov 2012; Anthony G. Basile <blueness@gentoo.org> pyasn1-0.1.4.ebuild:
+  stable ppc ppc64, bug #441290
 
 *pyasn1-0.1.4 (29 Aug 2012)
 
