--- a/dev-python/pyasn1-modules/ChangeLog
+++ b/dev-python/pyasn1-modules/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/pyasn1-modules
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyasn1-modules/ChangeLog,v 1.13 2012/11/05 22:23:09 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyasn1-modules/ChangeLog,v 1.14 2012/11/05 22:35:15 blueness Exp $
+
+  05 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
+  pyasn1-modules-0.0.4.ebuild:
+  stable arm, bug #441292
 
   05 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
   pyasn1-modules-0.0.4.ebuild:
