--- a/games-fps/urbanterror/ChangeLog
+++ b/games-fps/urbanterror/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-fps/urbanterror
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/urbanterror/ChangeLog,v 1.11 2012/11/05 22:14:35 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-fps/urbanterror/ChangeLog,v 1.12 2012/11/05 22:44:15 hasufell Exp $
+
+  05 Nov 2012; Julian Ospald <hasufell@gentoo.org> urbanterror-4.2.005.ebuild:
+  don't use dlopen if we can switch it off
 
 *urbanterror-4.2.005 (05 Nov 2012)
 
