--- a/net-misc/openssh/ChangeLog
+++ b/net-misc/openssh/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-misc/openssh
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/openssh/ChangeLog,v 1.453 2012/10/12 19:09:11 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/openssh/ChangeLog,v 1.454 2012/11/06 01:21:30 zerochaos Exp $
+
+  06 Nov 2012; Rick Farina <zerochaos@gentoo.org> openssh-5.5_p1-r2.ebuild,
+  openssh-5.6_p1-r2.ebuild, openssh-5.7_p1-r1.ebuild, openssh-5.8_p1-r1.ebuild,
+  openssh-5.8_p2-r1.ebuild, openssh-5.8_p2.ebuild, openssh-5.9_p1-r3.ebuild,
+  openssh-5.9_p1-r4.ebuild, openssh-6.0_p1-r1.ebuild, openssh-6.0_p1.ebuild,
+  openssh-6.1_p1.ebuild:
+  openssh needs to match the bindist settings on openssl or it breaks. bug
+  #437480
 
   12 Oct 2012; Mike Frysinger <vapier@gentoo.org> openssh-6.1_p1.ebuild:
   Always specify pid-dir to avoid configure script falling back to /etc/ssh on
