--- a/dev-python/traits/ChangeLog
+++ b/dev-python/traits/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/traits
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/traits/ChangeLog,v 1.33 2012/11/06 04:21:05 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/traits/ChangeLog,v 1.34 2012/11/06 04:24:34 idella4 Exp $
+
+  06 Nov 2012; Ian Delaney <idella4@gentoo.org> traits-4.2.0.ebuild:
+  rem of whitespace
 
   06 Nov 2012; Ian Delaney <idella4@gentoo.org> traits-4.2.0.ebuild:
   PYTHONPATH set in test phase subsequent to Bug #420055
