--- a/dev-libs/libestr/ChangeLog
+++ b/dev-libs/libestr/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/libestr
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libestr/ChangeLog,v 1.16 2012/10/17 03:07:52 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libestr/ChangeLog,v 1.17 2012/11/06 07:11:53 pinkbyte Exp $
+
+  06 Nov 2012; Sergey Popov <pinkbyte@gentoo.org> libestr-0.1.4.ebuild:
+  Fix minor QA issues - replace 'find/rm' with prune_libtool_files, replace
+  'emake install' with default src_install call
 
   17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> libestr-0.1.3.ebuild:
   x86 stable wrt bug #433225
