Fix tests wrt bug #335368. Thanks to Jeroen Roovers for providing patch
Package-Manager: portage-2.2.0_alpha142/cvs/Linux x86_64

--- a/dev-libs/geoip/ChangeLog
+++ b/dev-libs/geoip/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/geoip
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/ChangeLog,v 1.134 2012/11/06 07:46:23 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/ChangeLog,v 1.135 2012/11/06 08:04:59 pinkbyte Exp $
+
+  06 Nov 2012; Sergey Popov <pinkbyte@gentoo.org> geoip-1.4.8-r1.ebuild:
+  Fix tests wrt bug #335368. Thanks to Jeroen Roovers for providing patch
 
   06 Nov 2012; Sergey Popov <pinkbyte@gentoo.org> geoip-1.4.8-r1.ebuild:
   Stable on amd64 wrt bug #441184
