Drop not needed inherits.
Package-Manager: portage-2.2.0_alpha142/cvs/Linux x86_64
Manifest-Sign-Key: 0x8EEE3BE8

--- a/app-text/liblangtag/ChangeLog
+++ b/app-text/liblangtag/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/liblangtag
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/liblangtag/ChangeLog,v 1.4 2012/11/06 15:06:27 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/liblangtag/ChangeLog,v 1.5 2012/11/06 15:07:28 scarabeus Exp $
+
+  06 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> liblangtag-0.4.0.ebuild:
+  Drop not needed inherits.
 
 *liblangtag-0.4.0 (06 Nov 2012)
 
