--- a/app-emulation/virt-what/ChangeLog
+++ b/app-emulation/virt-what/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/virt-what
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/virt-what/ChangeLog,v 1.2 2011/07/29 19:10:04 cardoe Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/virt-what/ChangeLog,v 1.3 2012/11/06 15:18:02 cardoe Exp $
+
+*virt-what-1.12 (06 Nov 2012)
+
+  06 Nov 2012; Doug Goldstein <cardoe@gentoo.org> +virt-what-1.12.ebuild:
+  Version bump.
 
 *virt-what-1.11 (29 Jul 2011)
 
