--- a/app-emulation/virt-what/ChangeLog
+++ b/app-emulation/virt-what/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/virt-what
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/virt-what/ChangeLog,v 1.3 2012/11/06 15:18:02 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/virt-what/ChangeLog,v 1.4 2012/11/06 15:18:29 cardoe Exp $
+
+  06 Nov 2012; Doug Goldstein <cardoe@gentoo.org> virt-what-1.12.ebuild:
+  Version bump.
 
 *virt-what-1.12 (06 Nov 2012)
 
@@ -17,4 +20,3 @@
   16 Jul 2010; Doug Goldstein <cardoe@gentoo.org> +virt-what-1.2.ebuild,
   +metadata.xml:
   Add initial version to Gentoo
-
