--- a/app-admin/puppet/ChangeLog
+++ b/app-admin/puppet/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/puppet
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/puppet/ChangeLog,v 1.123 2012/11/06 10:04:44 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/puppet/ChangeLog,v 1.124 2012/11/06 16:15:59 tampakrap Exp $
+
+  06 Nov 2012; Theo Chatzimichos <tampakrap@gentoo.org> metadata.xml:
+  Add sysadmin and ruby herds in metadata.xml
 
   06 Nov 2012; Hans de Graaff <graaff@gentoo.org> puppet-2.7.18-r1.ebuild:
   Add back ruby19 target now that all dependencies are ready for ruby19. This
