--- a/app-admin/puppet/ChangeLog
+++ b/app-admin/puppet/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/puppet
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/puppet/ChangeLog,v 1.125 2012/11/06 19:17:59 idl0r Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/puppet/ChangeLog,v 1.126 2012/11/06 19:33:31 flameeyes Exp $
+
+  06 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org> puppet-3.0.1.ebuild:
+  Fix dependencies.
 
 *puppet-3.0.1 (06 Nov 2012)
 *puppet-2.7.19 (06 Nov 2012)
