Add GPL-2 to LICENSE for files/unbound.initd by Ian Stakenvicius (bug #426024).
Package-Manager: portage-2.2.0_alpha142/cvs/Linux x86_64
Manifest-Sign-Key: 0xA792A613

--- a/net-dns/unbound/ChangeLog
+++ b/net-dns/unbound/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-dns/unbound
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/unbound/ChangeLog,v 1.45 2012/11/07 02:57:38 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/unbound/ChangeLog,v 1.46 2012/11/07 03:02:01 jer Exp $
+
+  07 Nov 2012; Jeroen Roovers <jer@gentoo.org> unbound-1.4.16.ebuild,
+  unbound-1.4.17-r1.ebuild, unbound-1.4.18.ebuild:
+  Add GPL-2 to LICENSE for files/unbound.initd by Ian Stakenvicius (bug
+  #426024).
 
 *unbound-1.4.18 (07 Nov 2012)
 
