--- a/www-apps/wordpress/ChangeLog
+++ b/www-apps/wordpress/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/wordpress
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/wordpress/ChangeLog,v 1.141 2012/09/16 15:05:20 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/wordpress/ChangeLog,v 1.142 2012/11/07 10:23:13 tampakrap Exp $
+
+  07 Nov 2012; Theo Chatzimichos <tampakrap@gentoo.org> metadata.xml:
+  Transfer maintainership to sysadmin team
 
   16 Sep 2012; Agostino Sarubbo <ago@gentoo.org> -wordpress-3.4.1.ebuild:
   Remove old
