--- a/dev-db/postgresql-base/ChangeLog
+++ b/dev-db/postgresql-base/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/postgresql-base
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-base/ChangeLog,v 1.203 2012/09/25 16:11:35 titanofold Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-base/ChangeLog,v 1.204 2012/11/08 15:29:47 blueness Exp $
+
+  08 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
+  postgresql-base-8.3.21.ebuild:
+  stable arm ppc ppc64, bug #441144
 
   25 Sep 2012; <titan@gentoo.org> -postgresql-base-8.3.18.ebuild,
   -postgresql-base-8.3.19.ebuild, -postgresql-base-8.4.11.ebuild,
